--- a/front-end/lovebuffet-vue/src/assets/base.css
+++ b/front-end/lovebuffet-vue/src/assets/base.css
@@ -4,3 +4,11 @@ html, body {
     height:100%;
     font-family: "Roboto", serif;
 }
+.center-layout {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 2vw 10vh;
+}
