--- a/front-end/lovebuffet-vue/src/assets/base.css
+++ b/front-end/lovebuffet-vue/src/assets/base.css
@@ -12,3 +12,17 @@ html, body {
     text-align: center;
     padding: 0 2vw 10vh;
 }
+
+body::-webkit-scrollbar {
+    width: 0.5em;
+}
+
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px #fff;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: rgb(234,60,93);
+    background: linear-gradient(0deg, rgba(234,60,93,0.700717787114846) 0%, rgba(35,179,93,0.7035189075630253) 100%);
+    border-radius: 25px;
+}
