Check for email and username when registering.

--- a/front-end/lovebuffet-vue/src/assets/base.css
+++ b/front-end/lovebuffet-vue/src/assets/base.css
@@ -4,6 +4,9 @@ html, body {
     height:100%;
     font-family: "Roboto", serif;
 }
+body {
+    overflow-x: hidden;
+}
 .center-layout {
     display: flex;
     align-items: center;
